gitignore 수정, d3.js 사용

--- a/sta/templates/base.html
+++ b/sta/templates/base.html
@@ -19,6 +19,7 @@
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 </body>
 <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 {% block script %}
 
 {% endblock %}
