크롤링, nlp 구현

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <!-- pybo CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'original_review.css' %}">
 </head>
 <body>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
