--- a/templates/index/data.html
+++ b/templates/index/data.html
@@ -9,12 +9,12 @@
         </ul>
         <button type="submit" id="submit"><strong>검색</strong></button>
     </form>
-    <a href="{% url 'index:ranking_outer'%}"><strong style="color:red">랭킹 바로가기</strong></a>
+    <a href="{% url 'index:ranking'%}"><strong style="color:red">랭킹 바로가기</strong></a>
     <h2 class="main-title">패션지수</h2>
     <div class="row">
         <div class="col-lg-12">
             <div class="chart">
-                <canvas id="FashionChart" height="50vh" aria-label="Site statistics" role="img"></canvas>
+                <canvas id="FashionChart" height="100vh" aria-label="Site statistics" role="img"></canvas>
             </div>
             <div class="chart-detail">
                 <h2 style="text-align: center;">{{month_1}}월, {{month_2}}월, {{month_3}}월에 입기 좋아요</h2>
@@ -132,9 +132,7 @@
           { //데이터
             fill: true, // line 형태일 때, 선 안쪽을 채우는지 안채우는지
             data: [ //x축 label에 대응되는 데이터 값
-              {{ Jan }}, {{ Feb }}, {{ Mar }}, {{ Apr }},
-              {{ May }}, {{ June }}, {{ July }}, {{ Aug }},
-              {{ Sep }}, {{ Oct }}, {{ Nov }}, {{ Dec }},
+              {{ Jan }}, {{ Feb }}, {{ Mar }}, {{ Apr }},{{ May }}, {{ June }}, {{ July }}, {{ Aug }},{{ Sep }}, {{ Oct }}, {{ Nov }}, {{ Dec }}
             ],
             backgroundColor: [
               //색상
