--- a/templates/index/data.html
+++ b/templates/index/data.html
@@ -151,10 +151,17 @@
                 </ul>
             </section>
         </div>
-    </div>
-</div>
-</body>
 
+    </div>
+
+</div>
+
+</body>
+<footer>
+    <div>
+        <h3> Footer 부분입니다.</h3>
+    </div>
+</footer>
 {% endblock %}
 
 {% block script %}
