--- a/static/data.css
+++ b/static/data.css
@@ -1,4 +1,4 @@
-html, body { width: 100%; height: 100%; background-color: #F3F3F3;}
+body { background-color: #F3F3F3;}
 
 @font-face{
  font-family : 'Godo';
