--- a/static/ranking.css
+++ b/static/ranking.css
@@ -47,3 +47,74 @@ hr{
   color: rgb(50, 50, 50);
   text-align: center;
 }
+
+.table{
+  border-spacing: 0px;
+  font-size: 1rem;
+  margin : 0 auto;
+  width:100%
+}
+
+tr{
+   background-color: rgb(255, 255, 255);
+}
+
+.td_1{
+    min-width: 5rem;
+    max-width: 20rem;
+    padding: 0.5rem 2.5rem 0.5rem 2rem;
+    box-sizing: border-box;
+    word-break: break-all;
+    text-align: left;
+    border-right: 0.1rem solid rgb(241, 241, 241);
+    width: 5rem;
+    border-top: 0.1rem solid rgb(231, 231, 231);
+    left: 0rem;
+    z-index: 1;
+}
+
+.td_2{
+    min-width: 20rem;
+    max-width: 20rem;
+    height: 15rem;
+    padding: 0.5rem 2.5rem 0.5rem 2rem;
+    box-sizing: border-box;
+    word-break: break-all;
+    text-align: left;
+    border-right: 0.1rem solid rgb(241, 241, 241);
+    width: 20rem;
+    border-top: 0.1rem solid rgb(231, 231, 231);
+    left: 0rem;
+    z-index: 1;
+}
+
+.td_3{
+    min-width: 15rem;
+    max-width: 20rem;
+    height: 15rem;
+    padding: 0.5rem 2.5rem 0.5rem 2rem;
+    box-sizing: border-box;
+    word-break: break-all;
+    text-align: left;
+    border-right: 0.1rem solid rgb(241, 241, 241);
+    width: 15rem;
+    border-top: 0.1rem solid rgb(231, 231, 231);
+    left: 0rem;
+    z-index: 1;
+}
+
+.td_4{
+    min-width: 20rem;
+    max-width: 20rem;
+    height: 15rem;
+    padding: 0.5rem 2.5rem 0.5rem 2rem;
+    box-sizing: border-box;
+    word-break: break-all;
+    text-align: left;
+    border-right: 0.1rem solid rgb(241, 241, 241);
+    width: 20rem;
+    border-top: 0.1rem solid rgb(231, 231, 231);
+    left: 0rem;
+    z-index: 1;
+}
+
