--- a/static/data.css
+++ b/static/data.css
@@ -1,4 +1,4 @@
-html, body { width: 100%; height: 100%; background-color: #F3F3F3;}
+body { background-color: #F3F3F3;}
 
 @font-face{
  font-family : 'Godo';
@@ -58,15 +58,10 @@ a{
   font-family: "Godo", sans-serif;
   color: rgb(50, 50, 50);
   text-align: center;
-  margin-top : 20px;
+
 }
 
-.row{
-  margin : 0 auto;
-  width: 80%;
-  height: 400px;
-  border-radius: 15px;
-}
+
 
 .month_data{
   display: flex;
@@ -119,4 +114,3 @@ a{
   background-color:#cfd3d3;
   border-radius : 15px;
 }
-
