--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'original_review.css' %}">
 </head>
 <body>
+{% include 'navbar.html' %}
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 
 {% endblock %}
+{% include 'footer.html' %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 </body>
 <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
