--- a/templates/index/ranking.html
+++ b/templates/index/ranking.html
@@ -23,10 +23,12 @@
         </div>
         <!--검색창-->
         <form id="searchForm" method="get" action="{% url 'index:data' %}">
-            <input type="text" id="kw" name="kw" autocomplete="off" placeholder="옷 종류를 입력하세요." style="background-color:white;"/>
+            <input type="text" id="kw" name="kw" autocomplete="off" placeholder="옷 종류를 입력하세요."
+                   style="background-color:white;"/>
             <ul class="output" style="display:none;">
             </ul>
-            <button type="submit" id="submit" style="background-color:transparent;"><i class="fa fa-search" style="color : white;"></i>
+            <button type="submit" id="submit" style="background-color:transparent;"><i class="fa fa-search"
+                                                                                       style="color : white;"></i>
             </button>
         </form>
     </div>
@@ -44,49 +46,82 @@
 
                 <h2 class="title" id="test_1" style="display:block;">상의 종합 랭킹 TOP 10</h2>
                 <h2 class="title" id="test_2" style="display:none;">하의 종합 랭킹 TOP 10</h2>
-
-                <div id="t_1" style="display: block;" class="container">
+                <hr>
+                <!--랭킹-->
+                <div style="display: block;" class="container">
                     {% for ranking in ranking_list %}
-                    <hr>
-                    <div class="row">
+                    <table class="table">
+                        <tbody>
+                        <tr>
+                            <td class="td_1">
+                                <h2>{{ forloop.counter }}</h2>
+                            </td>
 
-                        <div class="col-lg-1">
-                            <h2>{{ forloop.counter }}</h2>
-                        </div>
-                        <div class="col-lg-3">
-                            <img src="{{ranking.ranking_img.url}}" width="100%" height="100%"/>
-                        </div>
-                        <div class="col-lg-2">
-                            <h2>{{ranking.ranking_name}}</h2>
-                            <br><br><br><br><br><br><br><br>
-                            <h2>랭킹 점수 : {{ranking.ranking_score}}</h2>
-                        </div>
-                    </div>
+                            <td class="td_2">
+                                <img src="{{ranking.ranking_img.url}}" width="100%" height="100%"/>
+                            </td>
+
+                            <td class="td_3">
+                                <h2>{{ranking.ranking_name}}</h2>
+                            </td>
+
+                            <td class="td_4">
+                                <h2>랭킹 점수 : {{ranking.ranking_score}}</h2>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="td_1">
+                                <h2>1</h2>
+                            </td>
+                            <td class="td_2">
+                                <img src="{% static 'assets/2.jpg' %}" width="100%" height="100%"/>
+                            </td>
+                            <td class="td_3">
+                                <h2>미니원피스</h2>
+                            </td>
+                            <td class="td_4">
+                                <h2>랭킹 점수 : 88</h2>
+                            </td>
+                        </tr>
+                                                <tr>
+                            <td class="td_1">
+                                <h2>1</h2>
+                            </td>
+                            <td class="td_2">
+                                <img src="{% static 'assets/2.jpg' %}" width="100%" height="100%"/>
+                            </td>
+                            <td class="td_3">
+                                <h2>미니원피스</h2>
+                            </td>
+                            <td class="td_4">
+                                <h2>랭킹 점수 : 88</h2>
+                            </td>
+                        </tr>
+                                                <tr>
+                            <td class="td_1">
+                                <h2>1</h2>
+                            </td>
+                            <td class="td_2">
+                                <img src="{% static 'assets/2.jpg' %}" width="100%" height="100%"/>
+                            </td>
+                            <td class="td_3">
+                                <h2>미니원피스</h2>
+                            </td>
+                            <td class="td_4">
+                                <h2>랭킹 점수 : 88</h2>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                     {% endfor %}
-                </div>
-
-                <div id="t_2" style="display: none;" class="container">
-                    <hr>
-                    <div class="row">
-                        <div class="col-lg-1">
-                            <h2>1</h2>
-                        </div>
-                        <div class="col-lg-3">
-                            <img src="{% static 'assets/2.jpg' %}" width="100%" height="100%"/>
-                        </div>
-                        <div class="col-lg-2">
-                            <h2>미니원피스</h2>
-                            <br><br><br><br><br><br><br><br>
-                            <h2>랭킹 점수 : 88</h2>
-                        </div>
-                    </div>
-                    <hr>
                 </div>
             </div>
         </div>
     </div>
 </main>
 </body>
+
 <!-- ! Main 끝 부분 -->
 
 {% endblock %}
@@ -111,7 +146,5 @@
         }
       }
     }
-
 </script>
-
 {% endblock %}
