--- a/templates/index/ranking.html
+++ b/templates/index/ranking.html
@@ -46,7 +46,7 @@
 
                 <h2 class="title" id="test_1" style="display:block;">상의 종합 랭킹 TOP 10</h2>
                 <h2 class="title" id="test_2" style="display:none;">하의 종합 랭킹 TOP 10</h2>
-                <hr>
+
                 <!--랭킹-->
                 <div style="display: block;" class="container">
                     {% for ranking in ranking_list %}
@@ -84,7 +84,7 @@
                                 <h2>랭킹 점수 : 88</h2>
                             </td>
                         </tr>
-                                                <tr>
+                        <tr>
                             <td class="td_1">
                                 <h2>1</h2>
                             </td>
@@ -98,7 +98,7 @@
                                 <h2>랭킹 점수 : 88</h2>
                             </td>
                         </tr>
-                                                <tr>
+                        <tr>
                             <td class="td_1">
                                 <h2>1</h2>
                             </td>
@@ -121,8 +121,9 @@
     </div>
 </main>
 <footer>
-    <div>
-        <h3> Footer 부분입니다.</h3>
+    <div class="footer_box">
+        <p class="footer_header">꿀트렌드</p>
+        <p>Copyrightⓒ 2021. 아기돼지삼형제. All rights reserved.</p>
     </div>
 </footer>
 </body>
@@ -151,6 +152,7 @@
         }
       }
     }
+
 
 
 
