--- a/static/data.css
+++ b/static/data.css
@@ -1,5 +1,12 @@
-body { background-color: #F3F3F3;}
+html {
+    position: relative;
 
+}
+body {
+    background-color: #F3F3F3;
+    width:100%;
+    min-height: 100%;
+}
 @font-face{
  font-family : 'Godo';
  font-style : normal;
@@ -8,7 +15,7 @@ body { background-color: #F3F3F3;}
 
 .navbar{
   width : 100%;
-  min-height: 70px;
+  height: 70px;
   background-color : black;
   color : white;
   border: none;
@@ -24,8 +31,9 @@ body { background-color: #F3F3F3;}
 h2{
   color: #373A3C;
 }
+
 #searchForm{
- float: right;
+  float: right;
   padding-top : 15px;
 }
 
@@ -36,11 +44,10 @@ h2{
 }
 
 .result-navbar{
-
   background-color : white;
   -webkit-box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
   padding: 0;
-  min-height: 4.57rem;
+  height: 4.57rem;
 }
 
 .result-container{
@@ -64,30 +71,15 @@ a{
 .row{
   margin : 0 auto;
   width: 80%;
-  height: 400px;
   border-radius: 15px;
 }
 
 .month_data{
   display: flex;
   justify-content: center;
-  max-width: 122.4rem;
 }
 
-.month_box{
-  max-width : 300px;
-  box-sizing: border-box;
-  flex: 1 1 33.3333%;
-  padding : 2rem;
-  background-color: #cfd3d3;
-  border-radius : 15px 15px 15px 15px;
-  box-shadow: rgb(0 0 0 / 12%) 0px 0.2rem 0.3rem 0px;
-  background-color : #fff;
-  margin-bottom: 2.4rem;
-  margin-left : 15px;
-  margin-right : 15px;
-  font-size : 20px;
-}
+
 
 .iconWrapper{
     padding : 0.5rem;
@@ -100,6 +92,19 @@ a{
     justify-content: center;
     color: rgb(154, 154, 154);
 }
+
+.month_box{
+  max-width:300px;
+  box-sizing: border-box;
+  padding : 2rem;
+  background-color: #cfd3d3;
+  border-radius : 15px 15px 15px 15px;
+  box-shadow: rgb(0 0 0 / 12%) 0px 0.2rem 0.3rem 0px;
+  background-color : #fff;
+  margin : 0 15px 2.4rem 15px;
+  font-size : 20px;
+}
+
 .month_graph{
   padding-top: 80px;
   background-color: white;
@@ -108,15 +113,58 @@ a{
   box-shadow: 0 .15rem 1.75rem 0 rgba(33,40,50,.15)
 }
 
-.d3_data{
+.d3_graph{
+  max-width: 68%;
+  padding: 20px 0;
+  background-color: white;
+  border-radius : 15px 15px 15px 15px;
   margin : 0 auto;
-  padding: 10px;
-  border-radius : 15px;
-  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 .15rem 1.75rem 0 rgba(33,40,50,.15);
+  z-index:1;
 }
 
-.d3_box{
-  background-color:#cfd3d3;
+
+.d3_data{
+  padding: 10px;
   border-radius : 15px;
+}
+
+.d3_detail_box{
+  margin-right:15px;
+  position:absolute ;
+  right:0;
+  background-color: #f4f4f4;
+  z-index:2;
+  border: 1px solid #f0f0f0;
+  box-shadow: 0 4px 100px rgb(46 58 89 / 8%);
+  border-radius: 20px;
+  height: auto;
+}
+table{
+  border-top: 1px solid #444444;
+  border-collapse: collapse;
+}
+th, td{
+border-bottom: 1px solid #444444;
+ padding: 5px;
+ background-color:white;
+}
+
+
+
+.footer_box{
+  text-align : center;
+  height:110px;
+  width:100%;
+  background:black;
+  color: white;
+  padding: 2em 0 2em 2em;
+}
+
+
+.footer_header{
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-bottom: 1em;
 }
 
