--- a/static/search.css
+++ b/static/search.css
@@ -1,3 +1,4 @@
+@font-face
 body {
    background: white;
 
@@ -8,6 +9,7 @@ body {
    font-size: 20px;
    font-weight: 300;
 }
+
 .navbar{
   min-height: 70px;
   background-color : #fff;
@@ -15,11 +17,15 @@ body {
   box-shadow: 0 .15rem 1.75rem 0 rgba(33,40,50,.15)
 }
 
+navbar-header{
+    font-family:arial;
+}
+
 a{
   text-decoration-line:none;
    padding: 30px 39px;
    align-items: center;
-  display: flex;
+    display: flex;
 }
 
 .header{
@@ -102,6 +108,7 @@ span { font-size: 1.5em; }
 .prediction-item:hover strong { color: #000; }
 
 p { margin-top: 1em; }
+
 h1 {
   color : white;
   margin-top : 0px;
